# volume-occlusion-editor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MIGRATION_NOTES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  verify_build.sh
.github/workflows/: build.yml
data/colortables/: AI.tga  Altimetric.tga  Brown 4grades.tga  Chimney.tga  Curvature.tga  DHI.tga  Depth.tga  Experimental.tga  Extremes.tga  Faults 2.tga  Faults.tga  Flames.tga  Forest.tga  Grey scales.tga  Ice.tga  Magic.tga  Pastel.tga  Red-White-Black.tga  Red-White-Blue.tga  Seismics.tga  Sky.tga  SunRise.tga  bluered.tga  dgi.tga  grayscale.tga  hist.tga  input.tga  opacity.tga  opacity_preview.tga  rainbow.tga  redblack.tga  spectral.tga  transfer.tga  transfer_preview.tga
data/samples/: blobs_128x128x128.raw  cornell_128x128x128.raw
data/shaders/: volumePlain.frag  volumePlain.vert
docs/: ARCHITECTURE.md
src/cli/: CMakeLists.txt  occgen_main.cpp
src/clustering/: CMakeLists.txt  Clusterer.cpp  Clusterer.h  KMeansClusterer.cpp  KMeansClusterer.h
src/common/: CMakeLists.txt
src/common/include/: cutil_inline.h
src/cuda/: CMakeLists.txt  LocalHistKernel.cpp  LocalHistKernel.cu  kernel.cu  main.cpp
src/viewer/: ApplicationPaths.h  CMakeLists.txt  Clusterer.cpp  Clusterer.h  Clustering.cpp  ConfigFile.cpp  ConfigFile.h  GradientGeneration.cpp  Helper.cpp  Helper.h  Histogram.cpp  Histogram.h  HistogramCollection.cpp  HistogramCollection.h  HistogramGeneration.cpp  Info.plist.in  KMeansClusterer.cpp  KMeansClusterer.h  KeyHandler.h  LocalhistTest.cpp  Logger.cpp  Logger.h  Main.cpp  MappingBasic.cpp  MappingBasic.h  MappingCollection.cpp  MappingCollection.h  MappingLinear.cpp  MappingLinear.h  MappingMultiBox.cpp  MappingMultiBox.h  MappingSeismicRamp.cpp  MappingSeismicRamp.h  MappingTruncated.cpp  MappingTruncated.h  ParseColorTable.cpp  PickHandler.cpp  PickHandler.h  PreRenderCamera.cpp  PreRenderCamera.h  (+54 more)
